Fix test JVM attach setting for CI
Co-authored-by: bjornesa <62022184+bjornesa@users.noreply.github.com>